--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         new Vue({
             el: '#editor',
             data: {
-                input: '# Hello',
+                input: '',
                 newFileName: '',
                 currentFile: null,
                 newFile: null,
